--- a/API/app/templates/home.html
+++ b/API/app/templates/home.html
@@ -1,13 +1,90 @@
-{% extends "layout.html" %}
-{% block title %}Home{% endblock %}
-{% block head %}
-  {{ super() }}
-{% endblock %}
-{% block content %}
+{% extends "layout.html" %} {% block title %}Home{% endblock %} {% block head %}
+{{ super() }} {% endblock %} {% block content %}
+
+<div class="text-center">
   <h1>Prueba de api-rest</h1>
-  <p>Esta pagina muestra las opciones que se tiene esta api </p>
- 
-  <div class="  justify-content-around" type="button" data-toggle="collapse" data-target="usuario">
-    <div>Usuarios</div> <div>Usuarios</div>
-  </div>
+  <p>Esta pagina muestra las opciones que se tiene esta api</p>
+
+</div>
+<div>
+
+  {% include "usuario.html" %}
+
+  {% include "ejercicio.html" %}
+
+  {% include "video.html" %}
+
+  {% include "entrenamiento.html" %}
+  {% include "ent_eje.html" %}
+  {% include "ent_alu.html" %}
+  {% include "config.html" %}
+  {% include "entrenador_alumno.html" %}
+<script>
+  function get(url, cod, sms, id = "") {
+    if (id != "") {
+      var id2 = document.getElementById(id).value
+      fetch(url.replace("0", id2))
+        .then(response => {
+          var campo_usuarios_get_cod = document.getElementById(cod)
+          campo_usuarios_get_cod.innerText = response.status
+          return response.json();
+        })
+        .then(json => {
+          var campo_usuarios_get = document.getElementById(sms)
+          campo_usuarios_get.textContent = JSON.stringify(json, undefined, 2)
+        })
+        .catch(error => {
+          var campo_usuarios_get = document.getElementById(sms)
+          campo_usuarios_get.textContent = JSON.stringify(error, undefined, 2)
+        })
+    } else {
+      fetch(url)
+        .then(response => {
+          var campo_usuarios_get_cod = document.getElementById(cod)
+          campo_usuarios_get_cod.innerText = response.status
+          return response.json();
+        })
+        .then(json => {
+          var campo_usuarios_get = document.getElementById(sms)
+          campo_usuarios_get.textContent = JSON.stringify(json, undefined, 2)
+        })
+        .catch(error => {
+          var campo_usuarios_get = document.getElementById(sms)
+          campo_usuarios_get.textContent = JSON.stringify(error, undefined, 2)
+        })
+    }
+
+  }
+</script>
+<script>
+  function post(url, campo, cod, sms) {
+    const u1 = document.getElementById(campo)
+    var data = JSON.stringify(u1.value)
+    fetch(url, {
+      method: "POST",
+      headers: {
+        'Accept': 'application/json',
+        'Content-Type': 'application/json'
+      }, body: data
+    })
+      .then(response => {
+        var campo_usuarios_get_cod = document.getElementById(cod)
+        campo_usuarios_get_cod.innerText = response.status
+        return response.json();
+      })
+      .then(json => {
+        console.log(JSON.stringify(json, undefined, 2))
+        var campo_usuarios_get = document.getElementById(sms)
+        campo_usuarios_get.textContent = JSON.stringify(json, undefined, 2)
+      })
+      .catch(error => {
+        var campo_usuarios_get = document.getElementById(sms)
+        campo_usuarios_get.textContent = JSON.stringify(error, undefined, 2)
+      })
+
+
+  }
+</script>
+
+
 {% endblock %}
