--- a/CLI-WEB/src/assets/style.css
+++ b/CLI-WEB/src/assets/style.css
@@ -52,6 +52,10 @@
     color: var(--text_nav)!important;
     background-color: var(--nav) !important;
 }
+.links{
+  background-color: var(--nav) !important;
+  color: var(--text_nav)!important;
+}
 
 body {
     
@@ -59,13 +63,11 @@ body {
     height: 100%;
 }
 #body{
-    margin-top:9vh;
     font-size: 1em;
-    height:88%;
-    margin-bottom: 2rem;
-    overflow-y: auto;
+    height:86.7%;
+    max-height:86.7%;
+    overflow-y:auto;
 }
-
 .boton{
     background-color: var(--nav) !important;
     color: var(--text_nav)!important;
@@ -73,14 +75,53 @@ body {
     border-radius: 10%;
     border-color: #888;
     border-width: thin;
+    
 }
 
-
 .container, .row{
-    max-width: 100% !important;
-    height:100%;
+    max-width: 100% ;
+    max-height:100%;
     padding: 0rem;
-    margin: 0rem
+    margin: 0rem;
+    
+    
+}
+.hidden{
+  display: none;
+}
+@media (min-width:801px)  {
+  .links{
+    position: relative;
+    top: 0;
+    bottom: 0;
+    width:25%;
+    
+    max-height:100%;
+  }
+  .body{
+    position: absolute;
+    right: 0;
+    width:75%;
+  }
+  .contenedor{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    height:86.7%;
+  }
+  .contenedor_c{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    height:100%;
+    width: 100%;
+    max-height:100%;
+  }
+  .hijo{
+    overflow-y:auto;
+  }
+  
+  
 }
 .error {
     color: #f55;
@@ -90,6 +131,7 @@ body {
     border-radius: 5%;
     border-color: #aaa;
     border-width: thin;
+    width:100% ;
 }
 .ent:hover, a:hover{
      cursor: pointer;
@@ -105,7 +147,15 @@ body {
     color: var(--text_nav)!important;
 }
 
-
+ul {
+  list-style: none;
+}
+.ul-nombre{
+  padding-left: 0;
+}
+.ul-link{
+  padding-left: 1rem;
+}
 
 
 
@@ -131,6 +181,9 @@ body {
   width: 60px;
   height: 34px;
   margin-bottom: 0%;
+}
+.links{
+
 }
 
 /* Hide default HTML checkbox */
