--- a/CLI-WEB/src/assets/style.css
+++ b/CLI-WEB/src/assets/style.css
@@ -56,6 +56,11 @@
   background-color: var(--nav) !important;
   color: var(--text_nav)!important;
 }
+#lista1 li {
+  display:inline;
+  padding-left:3px;
+  padding-right:3px;
+}
 
 body {
     
@@ -163,6 +168,9 @@ body {
     background-color: var(--nav) !important;
     color: var(--text_nav)!important;
 }
+.sinLeer{
+  background-color: #99f;
+}
 
 ul {
   list-style: none;
@@ -173,7 +181,25 @@ ul {
 .ul-link{
   padding-left: 1rem;
 }
+.badge {
+  padding-left: 9px;
+  padding-right: 9px;
+  -webkit-border-radius: 9px;
+  -moz-border-radius: 9px;
+  border-radius: 9px;
+}
 
+.label-warning[href],
+.badge-warning[href] {
+  background-color: #c67605;
+}
+#lblCartCount {
+    font-size: .6rem;
+    background: #ee0000;
+    color: #fff;
+    padding: 3px 3px;
+    vertical-align: top;
+}
 
 
 .footer{
@@ -199,7 +225,6 @@ ul {
   height: 34px;
   margin-bottom: 0%;
 }
-
 
 /* Hide default HTML checkbox */
 .switch input {
@@ -241,6 +266,10 @@ input:checked + .slider {
 input + .slider {
   box-shadow: 0 0 1px #ccc;
 }
+input:focus + .slider {
+  box-shadow: 0 0 2rem #2196F3;
+}
+
 input:checked + .slider:before {
   -webkit-transform: translateX(26px);
   -ms-transform: translateX(26px);
@@ -274,4 +303,6 @@ datalist {
     width: 200px;
     margin: 0;
   }
+  
+
   
