--- a/CLI-WEB/src/assets/style.css
+++ b/CLI-WEB/src/assets/style.css
@@ -153,15 +153,15 @@ body {
     border-radius: 5%;
     border-color: #aaa;
     border-width: thin;
-    width:100% ;
+    width:100%;
 }
 .ent:hover, a:hover{
      cursor: pointer;
 }
 .imagen{
-    max-width: 80%;
+    max-width: 100%;
     right: 0;
-    max-height: 80%;
+    max-height: 100%;
 }
 .modal-content{
     
@@ -303,6 +303,61 @@ datalist {
     width: 200px;
     margin: 0;
   }
+  .carga{
+    display: flex;
+    position: fixed;
+    width: 100%;
+    right: 0;
+    z-index: 1200;
+    bottom: 0;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background-color: #2d2d2ddd;
+    align-items: center;
+    justify-content:center
+  }
+  .signo{
+    
+    display: flex;
+    width: 3rem;
+    height: 3rem;
+    border-radius: 100%;
+    background-color: #ccc;
+    align-items: center;
+    justify-content:center;
+    animation-name: vueltas;
+   animation-duration: 1s;
+   animation-iteration-count: infinite;
+  }
+  .centro{
+    width: 2rem;
+    height: 2rem;
+    border-radius: 100%;
+    background-color: #2d2d2d;
+  }
+  .marca{
+    position: absolute;
+    width: 1rem;
+    height: 1.5rem;
+    top: 50%;
+    background-color: #2d2d2d;
+  }
   
+  @keyframes vueltas {
+    0% {
+      background-color: #ddd;
+      transform: rotate(0deg);
+   
+  }
+
+  50% {
+    background-color: #888;
+  }
+   100% {
+    background-color: #ddd;  
+    transform: rotate(360deg);
+   }
+}
 
   
